force-app/main/default/src/objects/PJN_DocuSign_One_Click_Recipient_Field__mdt/PJN_DocuSign_One_Click_Recipient_Field__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: DocuSign One Click
Purpose: Defines the mappings for creating a DocuSign Recipient. This is step 3 in setting up the Docusign One Click custom metadata.
Metadata Relationship(s): DocuSign One Click Recipient.
Created by Mavens: Yes</description>
    <label>DocuSign One Click Recipient Field</label>
    <pluralLabel>DocuSign One Click Recipient Field</pluralLabel>
</CustomObject>