force-app/main/default/src/objects/PJN_DocuSign_One_Click_Recipient_Field__mdt/fields/PJN_DocuSign_One_Click_Recipient__c.field-meta.xml
<CustomField>
    <fullName>PJN_DocuSign_One_Click_Recipient__c</fullName>
    <description>The recipient this setting is defined for.</description>
    <inlineHelpText>The recipient this setting is defined for.</inlineHelpText>
    <label>DocuSign One Click Recipient</label>
    <referenceTo>PJN_DocuSign_One_Click_Recipient__mdt</referenceTo>
    <relationshipLabel>DocuSign One Click Recipient Field</relationshipLabel>
    <relationshipName>DocuSign_One_Click_Recipient_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>