force-app/main/default/src/objects/PJN_DocuSign_One_Click_Recipient_Field__mdt/fields/PJN_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field__c</fullName>
    <description>The field to set in the generated URL.</description>
    <inlineHelpText>The field to set in the generated URL.</inlineHelpText>
    <label>Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AccessCode</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>FirstName</fullName>
            </value>
            <value>
                <fullName>LastName</fullName>
            </value>
            <value>
                <fullName>RecipientNote</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>RoutingOrder</fullName>
            </value>
            <value>
                <fullName>SignInPersonName</fullName>
            </value>
            <value>
                <fullName>SignNow</fullName>
            </value>
            <value>
                <fullName>SMSAuthPhone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>