force-app/main/default/src/objects/PJN_DocuSign_One_Click_Recipient_Field__mdt/fields/PJN_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Source_Field__c</fullName>
    <description>The API Name of the field on the SObject to get a value from.</description>
    <inlineHelpText>The API Name of the field on the SObject to get a value from.</inlineHelpText>
    <label>Source Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>