force-app/main/default/src/objects/PJN_DocuSign_One_Click_Recipient_Field__mdt/fields/PJN_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Value__c</fullName>
    <description>A hard coded value to set in the URL for the configured field. If Source Field is set this field is ignored.</description>
    <inlineHelpText>A hard coded value to set in the URL for the configured field. If Source Field is set this field is ignored.</inlineHelpText>
    <label>Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>